@@ -4,15 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
-    <repositories>
-        <repository>
-            <id>my-repo1</id>
-            <name>liferay</name>
-            <url>https://repository.liferay.com/nexus/content/repositories/public/</url>
-        </repository>
-    </repositories>
-
     <groupId>groupId</groupId>
     <artifactId>HomeStream-Server</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -22,9 +13,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>12</source>
+                    <target>12</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -59,13 +49,6 @@
             <artifactId>miglayout-swing</artifactId>
             <version>5.2</version>
         </dependency>
-
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna-platform</artifactId>
-            <version>5.6.0</version>
-        </dependency>
-
     </dependencies>
     
 </project>
